--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -31,10 +31,8 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="description">Description</label>
-                                    <!-- <input type="text" class="form-control" id="description" name="description"
-                                        [(ngModel)]="categoryobj.description"> -->
-
-                                        <textarea class="form-control" [(ngModel)]="categoryobj.description"  id="description" name="description"></textarea>
+                                    <textarea class="form-control" [(ngModel)]="categoryobj.description"
+                                        id="description" name="description"></textarea>
                                 </div>
                             </div>
                         </div>
