--- a/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
@@ -117,7 +117,7 @@
 
                                                 <a *ngIf="'Pages.Categories.Edit' | permission" class="btn"
                                                     href="javascript:;" (click)="editCategory(record.id)">
-                                                    <img src="../../../../assets/img/edit.svg.svg"></a>
+                                                    <img src="../../../../assets/img/edit.svg"></a>
                                                 <a *ngIf="'Pages.Categories.Delete' | permission" class="btn"
                                                     href="javascript:;" (click)="deleteCategory(record.id)">
                                                     <img src="../../../../assets/img/del.svg"></a>
