bugs fixed came in prod command

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -28,16 +28,14 @@
                     <div class="record-card-header">
                         <div class="record-card-header-bottom">
                             <div class="record-card-header-bottom-inner1">
-                                <button class="btn btn-images" (click)="calculateDate(-1)">
+                                <button class="btn btn-images" >
                                     <img src="../../../../assets/img/download.png">
                                     Download
                                 </button>
-                                <button class="btn btn-images" (click)="calculateDate(1)">
+                                <button class="btn btn-images">
                                     <img src="../../../../assets/img/upload.png">
                                  Upload
                                 </button>
-                                <h5>{{currentMonth}} {{currentYear}}</h5>
-
                             </div>
                             <div class="record-card-header-bottom-inner2">
                               
