filter and sorting

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -120,35 +120,29 @@
                                     [resizableColumns]="primengTableHelper.resizableColumns">
                                     <ng-template pTemplate="header">
                                         <tr class="task-table-inner">
-                                            <th class="accountNo-cell" scope="col" pSortableColumn="accountNo">
+                                            <th class="accountNo-cell" scope="col" pSortableColumn="AccountNumber">
                                                 Account No
-                                                <p-sortIcon field="accountNo"></p-sortIcon>
+                                                <p-sortIcon field="AccountNumber"></p-sortIcon>
                                             </th>
-                                            <th class="accountName-cell" scope="col" pSortableColumn="accountName">
+                                            <th class="accountName-cell" scope="col" >
                                                 Account Name
-                                                <p-sortIcon field="accountName"></p-sortIcon>
                                             </th>
-                                            <th class="accountType-cell" scope="col" pSortableColumn="accountType">
+                                            <th class="accountType-cell" scope="col" pSortableColumn="AccountType">
                                                 Account Type
-                                                <p-sortIcon field="accountType"></p-sortIcon>
+                                                <p-sortIcon field="AccountType"></p-sortIcon>
                                             </th>
-                                            <th class="accountSubtype-cell" scope="col"
-                                                pSortableColumn="accountSubtype">
+                                            <th class="accountSubtype-cell" scope="col">
                                                 Account Sub type
-                                                <p-sortIcon field="accountSubtype"></p-sortIcon>
                                             </th>
-                                            <th class="reconciliation-cell" scope="col"
-                                                pSortableColumn="reconciliation">
-                                                Reconciliation Type
-                                                <p-sortIcon field="reconciliation"></p-sortIcon>
+                                            <th class="reconciliation-cell" scope="col">
+                                                Reconciliation Type     
                                             </th>
                                             <th class="assignee-cell" scope="col" pSortableColumn="AssigneeId">
                                                 Assignee
                                                 <p-sortIcon field="AssigneeId"></p-sortIcon>
                                             </th>
-                                            <th class="action-cell" scope="col" pSortableColumn="action">
+                                            <th class="action-cell" scope="col">
                                                 Action
-                                                <p-sortIcon field="action"></p-sortIcon>
                                             </th>
 
                                             <th class="cell-none">
